# simple-jpeg-encoder-and-decoder

./: .gitignore  README.md  download_earthmap.sh  encoder.py  frame_information.py  helper.py  huffman_table.py  image_diff.py  main.py  main_decode.py  main_encode.py  pyproject.toml  quantization_table.py
huffman_code/: uvac_hc.csv  uvdc_hc.csv  yac_hc.csv  ydc_hc.csv
jpg/: dct_component.py  decoder.py  encoder.py  entropy_coded_segment.py  frame_information.py  helper.py  huffman_table.py  quantization_table.py  quantized_blocks.py  start_of_scan.py
jpg/core/: entropy_coded_segment.py  frame_information.py  helper.py  huffman_table.py  quantization_table.py  quantized_blocks.py  start_of_frame.py  start_of_scan.py
