[project]
name = "jpg-encoder-decoder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "pillow>=12.2.0",
]

[dependency-groups]
dev = [
    "isort>=8.0.1",
    "pyrefly>=0.64.1",
    "ruff>=0.15.12",
]
